// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Content Bucket 2 Slice Slice matches snapshot at \`lg\` breakpoint 1`] = `
<DocumentFragment>
  <div
    class="css-8atxkm"
  >
    <div
      class="css-146arns"
    >
      <div
        class="css-1jneg5s"
      >
        <div
          class="css-6ym3sz"
        >
          <div
            class="css-128qn49"
          >
            <div
              class="css-86cix"
            >
              <div
                class="css-1aiajnh"
              >
                <section
                  class="css-16kr8bf"
                >
                  <h3
                    class="nk-headline-heading css-i2jo9u"
                  >
                    Rugby Union
                  </h3>
                </section>
              </div>
            </div>
            <a
              class="css-cbmwfk"
              data-testid="buttonLink"
              href="https://www.thetimes.co.uk/"
              role="link"
            >
              <svg
                class="css-15vq000"
                fill="currentcolor"
                overrides="[object Object]"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  class="css-15vq000"
                  fill="currentcolor"
                  height="32"
                  overrides="[object Object]"
                  rx="16"
                  width="32"
                />
                <path
                  d="M20.6797 16.4355C20.6797 16.2988 20.6546 16.1689 20.6045 16.0459C20.5498 15.9274 20.4655 15.8135 20.3516 15.7041L15.0879 10.5566C14.9147 10.3835 14.7028 10.2969 14.4521 10.2969C14.279 10.2969 14.124 10.3379 13.9873 10.4199C13.846 10.502 13.7344 10.6113 13.6523 10.748C13.5658 10.8848 13.5225 11.0397 13.5225 11.2129C13.5225 11.4635 13.6182 11.6868 13.8096 11.8828L18.4922 16.4355L13.8096 20.9883C13.6182 21.1797 13.5225 21.403 13.5225 21.6582C13.5225 21.8268 13.5658 21.9795 13.6523 22.1162C13.7344 22.2575 13.846 22.3691 13.9873 22.4512C14.124 22.5332 14.279 22.5742 14.4521 22.5742C14.7028 22.5742 14.9147 22.4876 15.0879 22.3145L20.3516 17.167C20.4609 17.0576 20.543 16.9437 20.5977 16.8252C20.6478 16.7067 20.6751 16.5768 20.6797 16.4355Z"
                  fill="currentcolor"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
      <div
        class="css-1g5cjdw"
      >
        <div
          class="css-15rxmng"
          data-testid="article-container"
        >
          <div
            class="css-139nwb1"
          >
            <div
              class="css-1shocxe"
            >
              <div
                class="css-o476j2"
              >
                <div
                  class="css-qw1yda"
                >
                  <picture
                    class="css-1udor4k"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="This is ALT Text"
                      class="css-1qgqq71"
                      src="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F3c293bea-c74a-11ed-84e7-e2697ffed9a9.jpg?crop=2721%2C1531%2C216%2C63"
                    />
                  </picture>
                </div>
                <div
                  class="css-nv8tgr"
                >
                  <a
                    class="css-pyeu96"
                    href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-k2d5qk"
                      >
                        European cup winner Mihajlovic dies aged 53 after battle with leukaemia
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-13byt3y"
                  >
                    <span
                      class="css-18v3nbo"
                    >
                      Review
                    </span>
                    <div
                      class="css-lew009"
                    >
                      <hr
                        aria-hidden="true"
                        class="css-15kf7hd"
                        data-testid="divider"
                      />
                    </div>
                    <span
                      class="css-sidzln"
                    >
                      4 min read
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="css-13rcg9f"
            data-testid="divider"
          />
          <div
            class="css-139nwb1"
          >
            <div
              class="css-1shocxe"
            >
              <div
                class="css-o476j2"
              >
                <div
                  class="css-qw1yda"
                >
                  <picture
                    class="css-1udor4k"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="This is ALT Text"
                      class="css-1qgqq71"
                      src="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F3c293bea-c74a-11ed-84e7-e2697ffed9a9.jpg?crop=2721%2C1531%2C216%2C63"
                    />
                  </picture>
                </div>
                <div
                  class="css-nv8tgr"
                >
                  <a
                    class="css-pyeu96"
                    href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-k2d5qk"
                      >
                        ‘American owners pose threat to English pyramid’
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-13byt3y"
                  >
                    <span
                      class="css-18v3nbo"
                    >
                      Review
                    </span>
                    <div
                      class="css-lew009"
                    >
                      <hr
                        aria-hidden="true"
                        class="css-15kf7hd"
                        data-testid="divider"
                      />
                    </div>
                    <span
                      class="css-sidzln"
                    >
                      4 min read
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="css-13rcg9f"
            data-testid="divider"
          />
          <div
            class="css-139nwb1"
          >
            <div
              class="css-1shocxe"
            >
              <div
                class="css-o476j2"
              >
                <div
                  class="css-qw1yda"
                >
                  <picture
                    class="css-1udor4k"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="This is ALT Text"
                      class="css-1qgqq71"
                      src="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F3c293bea-c74a-11ed-84e7-e2697ffed9a9.jpg?crop=2721%2C1531%2C216%2C63"
                    />
                  </picture>
                </div>
                <div
                  class="css-nv8tgr"
                >
                  <a
                    class="css-pyeu96"
                    href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-k2d5qk"
                      >
                        £60m Brazilian prodigy Endrick snubs Chelsea to join Real Madrid
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-13byt3y"
                  >
                    <span
                      class="css-18v3nbo"
                    >
                      Review
                    </span>
                    <div
                      class="css-lew009"
                    >
                      <hr
                        aria-hidden="true"
                        class="css-15kf7hd"
                        data-testid="divider"
                      />
                    </div>
                    <span
                      class="css-sidzln"
                    >
                      4 min read
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="css-13rcg9f"
            data-testid="divider"
          />
          <div
            class="css-139nwb1"
          >
            <div
              class="css-1shocxe"
            >
              <div
                class="css-o476j2"
              >
                <div
                  class="css-qw1yda"
                >
                  <picture
                    class="css-1udor4k"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="This is ALT Text"
                      class="css-1qgqq71"
                      src="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F3c293bea-c74a-11ed-84e7-e2697ffed9a9.jpg?crop=2721%2C1531%2C216%2C63"
                    />
                  </picture>
                </div>
                <div
                  class="css-nv8tgr"
                >
                  <a
                    class="css-pyeu96"
                    href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-k2d5qk"
                      >
                        Blow for rebel clubs as court says Uefa can block Super League
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-13byt3y"
                  >
                    <span
                      class="css-18v3nbo"
                    >
                      Review
                    </span>
                    <div
                      class="css-lew009"
                    >
                      <hr
                        aria-hidden="true"
                        class="css-15kf7hd"
                        data-testid="divider"
                      />
                    </div>
                    <span
                      class="css-sidzln"
                    >
                      4 min read
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render Content Bucket 2 Slice Slice matches snapshot at \`xs\` breakpoint 1`] = `
<DocumentFragment>
  <div
    class="css-8atxkm"
  >
    <div
      class="css-146arns"
    >
      <div
        class="css-1jneg5s"
      >
        <div
          class="css-6ym3sz"
        >
          <div
            class="css-128qn49"
          >
            <div
              class="css-86cix"
            >
              <div
                class="css-1aiajnh"
              >
                <section
                  class="css-16kr8bf"
                >
                  <h3
                    class="nk-headline-heading css-i2jo9u"
                  >
                    Rugby Union
                  </h3>
                </section>
              </div>
            </div>
            <a
              class="css-cbmwfk"
              data-testid="buttonLink"
              href="https://www.thetimes.co.uk/"
              role="link"
            >
              <svg
                class="css-15vq000"
                fill="currentcolor"
                overrides="[object Object]"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  class="css-15vq000"
                  fill="currentcolor"
                  height="32"
                  overrides="[object Object]"
                  rx="16"
                  width="32"
                />
                <path
                  d="M20.6797 16.4355C20.6797 16.2988 20.6546 16.1689 20.6045 16.0459C20.5498 15.9274 20.4655 15.8135 20.3516 15.7041L15.0879 10.5566C14.9147 10.3835 14.7028 10.2969 14.4521 10.2969C14.279 10.2969 14.124 10.3379 13.9873 10.4199C13.846 10.502 13.7344 10.6113 13.6523 10.748C13.5658 10.8848 13.5225 11.0397 13.5225 11.2129C13.5225 11.4635 13.6182 11.6868 13.8096 11.8828L18.4922 16.4355L13.8096 20.9883C13.6182 21.1797 13.5225 21.403 13.5225 21.6582C13.5225 21.8268 13.5658 21.9795 13.6523 22.1162C13.7344 22.2575 13.846 22.3691 13.9873 22.4512C14.124 22.5332 14.279 22.5742 14.4521 22.5742C14.7028 22.5742 14.9147 22.4876 15.0879 22.3145L20.3516 17.167C20.4609 17.0576 20.543 16.9437 20.5977 16.8252C20.6478 16.7067 20.6751 16.5768 20.6797 16.4355Z"
                  fill="currentcolor"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
      <div
        class="css-1g5cjdw"
      >
        <div
          class="css-15rxmng"
          data-testid="article-container"
        >
          <div
            class="css-139nwb1"
          >
            <div
              class="css-1shocxe"
            >
              <div
                class="css-o476j2"
              >
                <div
                  class="css-qw1yda"
                >
                  <picture
                    class="css-1udor4k"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="This is ALT Text"
                      class="css-1qgqq71"
                      src="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F3c293bea-c74a-11ed-84e7-e2697ffed9a9.jpg?crop=2721%2C1531%2C216%2C63"
                    />
                  </picture>
                </div>
                <div
                  class="css-kc1g2v"
                >
                  <a
                    class="css-pyeu96"
                    href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-k2d5qk"
                      >
                        European cup winner Mihajlovic dies aged 53 after battle with leukaemia
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-13byt3y"
                  >
                    <span
                      class="css-18v3nbo"
                    >
                      Review
                    </span>
                    <div
                      class="css-lew009"
                    >
                      <hr
                        aria-hidden="true"
                        class="css-15kf7hd"
                        data-testid="divider"
                      />
                    </div>
                    <span
                      class="css-sidzln"
                    >
                      4 min read
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="css-obfal1"
            data-testid="divider"
          />
          <div
            class="css-139nwb1"
          >
            <div
              class="css-1shocxe"
            >
              <div
                class="css-o476j2"
              >
                <div
                  class="css-nv8tgr"
                >
                  <a
                    class="css-pyeu96"
                    href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-k2d5qk"
                      >
                        ‘American owners pose threat to English pyramid’
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-13byt3y"
                  >
                    <span
                      class="css-18v3nbo"
                    >
                      Review
                    </span>
                    <div
                      class="css-lew009"
                    >
                      <hr
                        aria-hidden="true"
                        class="css-15kf7hd"
                        data-testid="divider"
                      />
                    </div>
                    <span
                      class="css-sidzln"
                    >
                      4 min read
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="css-obfal1"
            data-testid="divider"
          />
          <div
            class="css-139nwb1"
          >
            <div
              class="css-1shocxe"
            >
              <div
                class="css-o476j2"
              >
                <div
                  class="css-nv8tgr"
                >
                  <a
                    class="css-pyeu96"
                    href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-k2d5qk"
                      >
                        £60m Brazilian prodigy Endrick snubs Chelsea to join Real Madrid
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-13byt3y"
                  >
                    <span
                      class="css-18v3nbo"
                    >
                      Review
                    </span>
                    <div
                      class="css-lew009"
                    >
                      <hr
                        aria-hidden="true"
                        class="css-15kf7hd"
                        data-testid="divider"
                      />
                    </div>
                    <span
                      class="css-sidzln"
                    >
                      4 min read
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="css-obfal1"
            data-testid="divider"
          />
          <div
            class="css-139nwb1"
          >
            <div
              class="css-1shocxe"
            >
              <div
                class="css-o476j2"
              >
                <div
                  class="css-nv8tgr"
                >
                  <a
                    class="css-pyeu96"
                    href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-k2d5qk"
                      >
                        Blow for rebel clubs as court says Uefa can block Super League
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-13byt3y"
                  >
                    <span
                      class="css-18v3nbo"
                    >
                      Review
                    </span>
                    <div
                      class="css-lew009"
                    >
                      <hr
                        aria-hidden="true"
                        class="css-15kf7hd"
                        data-testid="divider"
                      />
                    </div>
                    <span
                      class="css-sidzln"
                    >
                      4 min read
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
